--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>IK01596180-PROTECT COVER</title>
+  <title>零件信息</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 2em;
+      font-size: 18px;
+      line-height: 1.8;
+      white-space: pre-line;
+    }
+  </style>
 </head>
 <body>
-  <p>零件号：IK01596180-PROTECT COVER</p>
-  <p>生产批次号：2025070301</p>
-  <p>数量：7600</p>
+零件号：IK01596180-PROTECT COVER  
+生产批次号：2025070301  
+数量：7600
 </body>
 </html>
